--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <button class="both">Click Me!</button>
-    <button>No, Click Me!</button>
+    <button class="both">No, Click Me!</button>
   </body>
 </html>
