--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <button class="click">Click Me!</button>
-    <button class="no.click">No, Click Me!</button>
+    <button class="no-click">No, Click Me!</button>
   </body>
 </html>
