--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p class="odd">Number 1 - I'm a class!</p>
-    <div id="ID-1">Number 2 - I'm one ID.</div>
-    <p class="cool",class="odd">Number 3 - I'm a class, but cooler!</p>
-    <div id="ID-2">Number 4 - I'm another ID.</div>
-    <p class="odd">Number 5 - I'm a class!</p>
+    <p>Number 1 - I'm a class!</p>
+    <div>Number 2 - I'm one ID.</div>
+    <p>Number 3 - I'm a class, but cooler!</p>
+    <div>Number 4 - I'm another ID.</div>
+    <p>Number 5 - I'm a class!</p>
 
 
   </body>
