--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="odd-pink">Number 1 - I'm a class!</p>
+    <div id="second-ID">Number 2 - I'm one ID.</div>
+    <p class="size odd-pink">Number 3 - I'm a class, but cooler!</p>
+    <div id="four-ID" class="size">Number 4 - I'm another ID.</div>
+    <p class="odd-pink">Number 5 - I'm a class!</p>
 
 
   </body>
